--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>提案介紹</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
@@ -32,6 +32,7 @@
             color: white;
             padding: 10px 30px;
             font-size: .975rem;
+            border-radius: 0px;
         }
 
         .abtn:hover {
@@ -84,12 +85,12 @@
         .propalfoot {
             background-color: gainsboro;
             padding: 150px;
-            position: relative;            
+            position: relative;
             background-image: url("../img/proposal2.png");
             background-size: cover;
             color: white;
             text-shadow: 0.1em 0.1em 0.1em black;
-            margin-bottom: -100px;            
+            margin-bottom: -100px;
         }
 
         .intro {
@@ -98,16 +99,20 @@
         }
 
         .qAbtn {
-            background-color: #198754;
+            background-color: transparent;
             border: solid 2px #198754;
-            color: white;
-            font-weight: bold;
-            padding: 10px 30px;
+            border-radius: 0px;
+            color: black;
+            padding: 10px 20px;
+        }
+
+        .qAbtn:focus{
+            background-color: #047c51;
         }
 
         .qAbtn:hover {
-            background-color: #198754;
-            border: solid 2px #198754;
+            background-color: #047c51;
+            border: solid 2px #047c51;
         }
 
         .good {
@@ -207,12 +212,8 @@
         <div>
             <h2>對集資流程仍有疑問</h2>
             <h4>歡迎先看看常見問題集，或是直接聯繫我們唷！</h4>
-            <div style="border-radius: 50px; border: 2px solid #047c51; padding: 50px; margin: 40px 370px 0px 370px;">
-                <h4>提案有什麼限制？計畫失敗還會收費嗎？</h4>
-                <h4>上架平台會有集資顧問協助嗎？</h4>
-                <h4 style="padding-bottom: 20px;">可以先參考：</h4>
-                <button type="button" class="abtn btn btn-outline-primary">提案常見問題</button>
-            </div>
+            <br>
+            <button type="button" class="qAbtn btn btn-outline-primary">提案常見問題</button>
         </div>
     </div>
 
@@ -220,7 +221,7 @@
         <div class="propaltitle2">
             <h2>我要的被實現</h2>
             <p>用群眾的力量，讓有價值的事物獲得更好的機會</p>
-            <a href="./proposal.html" class="abtn btn btn-info" role="button" style="padding: 10px 50px;">開始提案</a>
+            <a href="./proposal.html" class="abtn btn btn-info" role="button">開始提案</a>
         </div>
     </div>
     <script src="../layout/layout.js"></script>
