--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -378,7 +378,7 @@
                     <div class="pagebtndiv">
                         <input id="prepage3" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
                         <span>&nbsp</span>
-                        <input class="QAaddbtn btn btn-primary" type="button" id="proposalsubmit" value="提交專案">
+                        <input class="btn btn-primary" type="button" id="proposalsubmit" value="提交專案">
                     </div>
 
                 </div>
@@ -388,8 +388,6 @@
 </body>
 </form>
 
-<!-- 文字編輯器 5 -->
-<!-- <script src="https://cdn.ckeditor.com/ckeditor5/35.4.0/super-build/ckeditor.js"></script> -->
 
 <!-- 頁籤切換 -->
 <script>
