--- a/Fundraising/wwwroot/Registration/registration.html
+++ b/Fundraising/wwwroot/Registration/registration.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ajax -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="/layout.css">
     <link rel="stylesheet" href="/registration.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>註冊會員</title>
 
     <style>
@@ -176,18 +180,18 @@
 
                 <header>註冊新帳號</header>
 
-                <form action="#">
+                <form>
 
                     <div class="field input-field">
-                        <input type="email" placeholder="輸入信箱" class="input" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"/>
+                        <input type="email" id="UserEmail" name="UserEmail" placeholder="輸入信箱" class="input" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"/>
                     </div>
 
                     <div class="field input-field">
-                        <input type="text" placeholder="輸入會員名稱" class="input" required>
+                        <input type="text" id="UserNickname" name="UserNickname" placeholder="輸入會員名稱" class="input" required>
                     </div>
 
                     <div class="field input-field">
-                        <input type="password" placeholder="輸入密碼" class="password" pattern="^(?=.*[a-zA-Z])(?=.*[0-9]).{8,}$" required="required" oninput="setCustomValidity('');" oninvalid="setCustomValidity('請輸入正確的密碼格式:含英數至少八個字元');"/>
+                        <input type="password" id="UserPassword" name="UserPassword" placeholder="輸入密碼" class="password" pattern="^(?=.*[a-zA-Z])(?=.*[0-9]).{8,}$" required="required" oninput="setCustomValidity('');" oninvalid="setCustomValidity('請輸入正確的密碼格式:含英數至少八個字元');"/>
                     </div>
 
                     <div class="field input-field">
@@ -197,7 +201,7 @@
 
 
                     <div class="field button-field">
-                        <button type="submit">註冊</button>
+                        <button type="button" onclick="OK()">註冊</button>
                     </div>
 
                 </form>
@@ -217,10 +221,13 @@
             </div>
         </div>
     </section>
-
+    
 
     <script src="../layout/layout.js"></script>
     <script src="registration.js"></script>
+    <script>
+       
+    </script>
 </body>
 
 </html>
