--- a/Fundraising/wwwroot/MemberCentre/ProjectManage.html
+++ b/Fundraising/wwwroot/MemberCentre/ProjectManage.html
@@ -10,6 +10,10 @@
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css"
+    />
     <link rel="stylesheet" href="./stepper.css" />
     <style>
       .card {
@@ -25,7 +29,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="mx-auto" style="width: 90%">
+      <div class="mx-auto" style="width: 100%">
         <h5 class="ms-4 mt-3">
           <a href="./UserProject.html" class="text-dark text-decoration-none h5"
             >提案紀錄</a
@@ -33,36 +37,12 @@
           / <span class="text-decoration-underline">專案管理</span>
         </h5>
       </div>
-      <!-- 狀態管理 -->
-      <div class="card mx-auto p-3 row" style="width: 90%">
-        <div class="row">
-          <h4 class="col-md-2 my-1">狀態管理</h4>
-          <form class="col-md-10 d-flex justify-content-end p-0">
-            <label for="ProjectStatus" class="form-label pt-2">
-              更新目前的專案進度
-            </label>
-            <select
-              class="form-select ms-3"
-              id="ProjectStatus"
-              name="ProjectStatus"
-              style="max-width: 30%"
-            >
-              <option value="募資完成">募資完成</option>
-              <option value="生產階段">生產階段</option>
-              <option value="寄送產品">寄送產品</option>
-            </select>
-            <button type="submit" class="btn btn-success ms-3">儲存</button>
-          </form>
-        </div>
-      </div>
-
       <!-- 贊助者清單 -->
-      <div class="card mt-3 mx-auto p-3" style="width: 90%">
-        <h4 class="m-2">贊助人清單</h4>
-        <table class="table table-hover align-middle text-center">
+      <div class="card mt-3 mx-auto p-3" style="width: 100%">
+        <h5 class="m-2">贊助人清單</h5>
+        <table id="table_id" class="table table-hover align-middle text-center">
           <thead>
             <tr>
-              <th scope="col">贊助編號</th>
               <th scope="col">贊助日期</th>
               <th scope="col">贊助金額</th>
               <th scope="col">回饋方案</th>
@@ -70,25 +50,17 @@
               <th scope="col">收件人電話</th>
               <th scope="col">收件人地址</th>
               <th scope="col">備註</th>
-              <th scope="col">聯絡贊助人</th>
+              <th scope="col">狀態</th>
             </tr>
           </thead>
           <tbody>
-            <!-- 第一筆 -->
             <tr>
-              <!-- 贊助編號 -->
-              <td>0000001</td>
               <!-- 贊助日期 -->
               <td>2023-01-01</td>
               <!-- 贊助金額 -->
               <td>2,000</td>
               <!-- 回饋方案 -->
-              <td class="text-start" style="max-width: 200px">
-                <ul>
-                  <li>選擇的方案一*2</li>
-                  <li>選擇的方案一*2</li>
-                </ul>
-              </td>
+              <td class="text-start" style="max-width: 200px">選擇的方案</td>
               <!-- 收件人姓名 -->
               <td>Nick</td>
               <!-- 收件人電話 -->
@@ -101,22 +73,36 @@
               <td class="text-start" style="max-width: 200px">
                 我叫基德，是個律師。
               </td>
-              <!-- 聯絡 -->
               <td>
-                <a href="#" class="btn btn-outline-success">聯絡 </a>
+                <select
+                  name="status"
+                  id="status"
+                  class="form-select form-select-sm"
+                >
+                  <option value="2">生產階段</option>
+                  <option value="3">產品寄送</option>
+                </select>
               </td>
             </tr>
-            <!-- 第二筆 -->
           </tbody>
         </table>
       </div>
     </div>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
+      integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
     <script src="../layout/membercentre_layout.js"></script>
+    <script src="./Js_src/ProjectManage.js"></script>
   </body>
 </html>
